# rarg

./: .gitignore  ESY.md  LICENSE  ORIGINS.md  README.md  azure-pipelines.yml  esy.json  package.json  rarg.json
.ci/: build-platform.yml
tests/: TestCi.re  TestDev.re  TestFramework.re  dune
tests/__snapshots__/: RargCmd_validate.d5f8c28a.0.snapshot  RargComponentsErrors_DuplicateArgs.0b441d9a.0.snapshot  RargComponentsErrors_DuplicateArgs.add36454.0.snapshot  RargComponentsErrors_InvalidArgNames.17d3d187.0.snapshot  RargComponentsErrors_InvalidArgNames.b4b00a55.0.snapshot  RargComponentsErrors_UnknownArgs_no_positionals.46a940a4.0.snapshot  RargComponentsErrors_UnknownArgs_no_positionals.ada734dc.0.snapshot  RargComponentsErrors_UnknownArgs_with_positionals.1bfe4fbf.0.snapshot  RargComponentsErrors_UnknownArgs_with_positionals.2a7d66ba.0.snapshot  RargComponentsErrors_UnknownArgs_with_positionals.6103095a.0.snapshot  RargComponentsErrors_ValidationError_ArgsCount.54516e19.0.snapshot  RargComponentsErrors_ValidationError_ArgsCount.713f94b1.0.snapshot  RargComponentsErrors_ValidationError_ArgsCount.7825cfbd.0.snapshot  RargComponentsErrors_ValidationError_ArgsCount.f1a29b69.0.snapshot  RargComponentsHelp_Help.68d44ef8.0.snapshot  RargComponentsHelp_Help.6ded9ba6.0.snapshot  RargComponentsHelp_Help.c75256d5.0.snapshot  RargComponentsHelp_Help.e83467b9.0.snapshot  RargComponentsTips_AddPathScript.3666b3eb.0.snapshot  RargComponentsTips_AddPathScript.e18b822c.0.snapshot  RargComponentsTips_AddPathTip.05dc030a.0.snapshot  RargComponentsTips_AddPathTip.2a353412.0.snapshot  (+20 more)
(+67 files in other folders)
