(library
  (name DsTests)
  (public_name ds.tests)
  ; IMPORTANT: -linkall flag is required to include all tests.
  (ocamlopt_flags -linkall -g)
  (libraries
    rely.lib
    ds.seed
    ds.internal
    ds
  )
  (modules (:standard \ TestDev TestCi))
)
(executable
  (package tests)
  (name TestDev)
  (public_name TestDev.exe)
  (libraries
    ds.tests
  )
  (modules TestDev)
)
(executable
  (package tests)
  (name TestCi)
  (public_name TestCi.exe)
  (libraries
    ds.tests
  )
  (modules TestCi)
)
(include_subdirs unqualified)
(dirs :standard __tests__)
